samples/_failures_safe/1761592684_624dec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddea8af1.c: In function ‘main’:
./samples/SAFE/__tmp_ddea8af1.c:156:13: error: expected ‘;’ at end of input
  156 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_ddea8af1.c:156:5: error: expected declaration or statement at end of input
  156 |     return 0
      |     ^~~~~~
